feat: Adding more changes on project
