# src/main/java/br/com/autocarehub/domain/model/User.java
@@ -16,6 +16,7 @@ public record User(
         String passwordHash,
         UserRole role,
         @Nullable UUID customerId,
+        @Nullable UUID companyId,
         String fullName,
         String profileType,
         String companyName,
@@ -57,6 +58,7 @@ public record User(
                 passwordHash,
                 role,
                 customerId,
+                null,
                 username,
                 role.name(),
                 "",
